# nppHTMLTag

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  NEWS.textile  README.textile  bitbucket-pipelines.yml  build.cmd  make_release.cmd
.circleci/: config.yml
.circleci/scripts/: bb_release.sh  gh_release.sh
dat/: HTMLTag-translations.ini
src/: Entities.cpp  Entities.h  HtmlTag.cpp  HtmlTag.h  LocalizedNppPlugin.pas  NppSimpleObjects.pas  TagFinder.cpp  TagFinder.h  U_Entities.pas  U_HTMLTagFinder.pas  U_JSEncode.pas  U_Npp_HTMLTag.pas  Unicode.cpp  Unicode.h
src/Forms/: AboutDlg.cpp  AboutDlg.h  AboutForm.pas  ConfigForm.pas  resource.h
src/Include/: SciApi.inc  SciSupport.inc
src/LibNppPlugin/: FuncArray.cpp  FuncArray.h  LocalizedPlugin.cpp  LocalizedPlugin.h  NppSimpleObjects.pas  PluginBase.cpp  PluginBase.h  nppplugin.pas
src/LibNppPlugin/include/: HashedStringList.h  Internal.h  SciApi.h  SciTextObjects.cpp  SciTextObjects.h  TextConv.cpp  TextConv.h  VersionInfo.h
src/prj/: CMakeLists.txt  DllExports.pas  DllMain.cpp  HTMLTag.lpi  HTMLTag.lpr  HTMLTag.rc
